--- a/cotizador_acerta/templates/polizas/solicitud.html
+++ b/cotizador_acerta/templates/polizas/solicitud.html
@@ -703,7 +703,7 @@
                                         </div>
                                         <div class="col-md-12">
                                             <div class="col-md-12">
-                                                <input type="text" class="form-control form-disabled" value="{{ cotizacion.conductor.nombre }} {{ cotizacion.conductor.apellido }}" disabled>
+                                                <input type="text" class="form-control form-disabled" value="{{ cotizacion.conductor.nombre }} {{ cotizacion.conductor.apellido }}/ WEB" disabled>
                                             </div>
                                         </div>
                                     </div>
