Antiguos paso 3 y 4 combinados (datos políticos y financieros).

--- a/cotizador_acerta/templates/polizas/solicitud.html
+++ b/cotizador_acerta/templates/polizas/solicitud.html
@@ -300,7 +300,7 @@
                                 </fieldset>
 
                                 <fieldset title="3">
-                                    <legend class="text-semibold">Datos Políticos</legend>
+                                    <legend class="text-semibold">Datos Políticos y Financieros</legend>
 
                                     <div class="row">
                                         <div class="col-md-12">
@@ -342,13 +342,6 @@
                                             <p style="text-align: justify; font-size: 12px;">(1) Las personas políticamente expuestas son aquellos, nacionales o extranjeros, que desempeñan o han desempeñado funciones públicas destacadas en un país extranjero o en su propio país, por ejemplo: Jefes de Estado o de un gobierno, políticos de alta jerarquía, funcionarios gubernamentales, judiciales o militares de alta jeraruía, altos ejecutivos de empresas estatales, funcionarios importantes de partidos políticos. (2) Únicamente el cónyugue, los padres, los hermanos y los hijos de una persona políticamente expuesta. (3) Persona conocida por su íntima relación con respecto a la persona expuesta políticamente, esto incluye a quienes están en posición de realizar transacciones financieras, comerciales o de cualquier naturaleza, ya sean locales o internacionales, en nombre de la persona expuesta políticamente.
                                             </p>
                                         </div>
-                                    </div>
-                                </fieldset>
-
-                                <fieldset title="4">
-                                    <legend class="text-semibold">Datos Financieros</legend>
-
-                                    <div class="row">
                                         <div class="col-md-12">
                                             <div class="col-md-12">
                                                 <label>Prima de Seguros mayor o igual a B./ 10,000.00</label>
@@ -428,7 +421,7 @@
                                         </div>
                                     </div>
                                 </fieldset>
-                                <fieldset title="5">
+                                <fieldset title="4">
                                     <legend class="text-semibold">Datos Adicionales</legend>
 
                                     <div class="row">
@@ -534,7 +527,7 @@
                                         </div>
                                     </div>
                                 </fieldset>
-                                <fieldset title="6">
+                                <fieldset title="5">
                                     <legend class="text-semibold">Poliza y Bien</legend>
                                     <div class="row">
                                         <div class="col-md-12">
@@ -593,7 +586,7 @@
                                         </div>
                                     </div>
                                 </fieldset>
-                                <fieldset title="7">
+                                <fieldset title="6">
                                     <legend class="text-semibold">Cobranza</legend>
                                     <div class="row">
                                         <div class="col-md-12">
@@ -678,7 +671,7 @@
                                         {% endif %}
                                     </div>
                                 </fieldset>
-                                <fieldset title="8">
+                                <fieldset title="7">
                                     <legend class="text-semibold">¡Solicitar!</legend>
                                     <div class="row">
                                         <div class="col-md-12">
