--- a/cotizador_acerta/templates/polizas/solicitud.html
+++ b/cotizador_acerta/templates/polizas/solicitud.html
@@ -444,10 +444,10 @@
                                         </div>
                                         <div class="col-md-12">
                                             <div class="col-md-8">
-                                                <input type="text" class="form-control form-disabled" id="nombre-conductor" value="{{ cotizacion.conductor.nombre }} {{ cotizacion.conductor.apellido }}" disabled>
+                                                <input type="text" class="form-control" id="nombre-conductor" value="{{ cotizacion.conductor.nombre }} {{ cotizacion.conductor.apellido }}" >
                                             </div>
                                             <div class="col-md-4">
-                                                <input type="text" class="form-control form-disabled" id="id-conductor" value="{{ cotizacion.conductor.identificacion }}" disabled>
+                                                <input type="text" class="form-control" id="id-conductor" value="{{ cotizacion.conductor.identificacion }}">
                                             </div>
                                         </div>
                                         <div class="col-md-12">
