--- a/cotizador_acerta/templates/polizas/pdf_personaNatural.html
+++ b/cotizador_acerta/templates/polizas/pdf_personaNatural.html
@@ -961,6 +961,47 @@
 						</p>
 					</td>
 				</tr>
+				<tr>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+				</tr>
+				<tr style="border: 1px solid #E76C42; text-align: left; padding-top: 5px;">
+					<td colspan="2" style="padding-left: 15px; padding-right: 10px; padding-bottom: 10px;">
+						<p>
+							<table>
+								<tr>
+									<td style="padding-bottom: -4px; padding-top: -4px; font-size: 10px; font-weight: bold; text-decoration: underline;">Datos Jurídicos</td>
+								</tr>
+								<tr style="border: 2px solid #999; padding-top: 2px; padding-bottom: -1px;">
+									<td colspan="2"><span>¿Es Jurídico?</span>
+									{% if conductor2.es_juridico == False %}
+										<span style="text-decoration: underline; font-size: 12px;">&nbsp;_X_</span><span>&nbsp;No</span>
+										<span>&nbsp;___</span><span>&nbsp;Sí</span></p>
+										{% else %}
+										<span>&nbsp;___</span><span>&nbsp;No</span>
+										<span style="text-decoration: underline; font-size: 12px;">&nbsp;_X_</span><span>&nbsp;Sí</span>
+									</td>
+										{% endif %}
+								</tr>
+								<tr style="border: 2px solid #999; padding-top: 2px; padding-bottom: -1px;">
+									<td colspan="2"><span>RUC:</span>&nbsp;<span>{{conductor2.RUC}}</span> </td>
+								</tr>
+								<tr style="border: 2px solid #999; padding-top: 2px; padding-bottom: -1px;">
+									<td colspan="2"><span>Razón Social:</span>&nbsp;<span>{{conductor2.razon_social}}</span> </td>
+								</tr>
+								<tr style="border: 2px solid #999; padding-top: 2px; padding-bottom: -1px;">
+									<td colspan="2"><span>País de procedencia:</span>&nbsp;<span>{{conductor2.pais_procedencia}}</span> </td>
+								</tr>
+								<tr style="border: 2px solid #999; padding-top: 2px; padding-bottom: -1px;">
+									<td colspan="2"><span>Fecha de constitución:</span>&nbsp;<span>{{conductor2.fecha_constitucion}}</span> </td>
+								</tr>
+							</table>
+						</p>
+					</td>
+				</tr>
+
 			</table>
 		</div>
 
