Nombre de quien firma en pdf solicitud es corredor, no cliente

--- a/cotizador_acerta/templates/polizas/pdf_personaNatural.html
+++ b/cotizador_acerta/templates/polizas/pdf_personaNatural.html
@@ -679,7 +679,7 @@
 								</tr>
 								<tr style="padding-bottom: -6px;">
 									<td>Nombre de quien firma: </td>
-									<td><span>{{solicitud.firmador}}</span></td>
+									<td><span>{{solicitud.cotizacion.corredor}}</span></td>
 								</tr>
 								<tr>
 									<td colspan="2" style="padding-right: -10px;">Firma del corredor o colaborador autorizado: </td>
