--- a/cotizador_acerta/templates/registro_corredor.html
+++ b/cotizador_acerta/templates/registro_corredor.html
@@ -81,6 +81,7 @@
                                 {% bootstrap_field form.ruc show_label=False %}
                                 {% bootstrap_field form.licencia show_label=False %}
                                 {% bootstrap_field form.email show_label=False %}
+                                {% bootstrap_field form.polizas show_label=False %}
                                 {% bootstrap_field form.planes show_label=False %}
 
                                 {% buttons %}
