--- a/cotizador_acerta/templates/polizas/confirmacion_solicitud.html
+++ b/cotizador_acerta/templates/polizas/confirmacion_solicitud.html
@@ -236,7 +236,7 @@
                                 <div class="col-md-12">
                                     <div class="col-md-3"></div>
                                     <div class="col-sm-4 col-md-6 text-center">
-                                        <button id="emitir" class="btn btn-lg button" onclick="window.open('{% url 'emitir' solicitud.pk %}')">
+                                        <button id="emitir" class="btn btn-lg button" onclick="window.open('{% url 'emitir-poliza' solicitud.pk %}','_self')">
                                             Emitir póliza
                                         </button>
                                     </div>
@@ -274,7 +274,7 @@
 <script type="text/javascript">
     $('document').ready(function(){
         $('#emitir').click(function(){
-            window.open("{% url 'emitir-poliza' solicitud.pk %}");
+            window.open("{% url 'emitir' solicitud.pk %}");
         });
     });
 </script>
