--- a/cotizador_acerta/templates/polizas/pdf_personaNatural.html
+++ b/cotizador_acerta/templates/polizas/pdf_personaNatural.html
@@ -31,7 +31,7 @@
 					</td>
 					<td style="border: 1px solid #E76C42; text-align: left; padding-top: 5px; padding-left: -20px;">
 						<p style="text-decoration: underline; font-weight: bold; padding-bottom: -10px;">Para uso de la compañía:</p>
-						<p style="padding-bottom: -10px;"><span>No. póliza: </span><span></span>{{solicitud.pk}}  <span>&nbsp;&nbsp;&nbsp;Riesgo: </span><span></span></p>
+						<p style="padding-bottom: -10px;"><span>No. póliza: </span><span></span>  <span>&nbsp;&nbsp;&nbsp;Riesgo: </span><span></span></p>
 						<p>Código del cliente: {{conductor1.pk}} </p>
 					</td>
 				</tr>
