repair si/no fields

--- a/cotizador_acerta/templates/polizas/confirmacion_solicitud.html
+++ b/cotizador_acerta/templates/polizas/confirmacion_solicitud.html
@@ -227,7 +227,7 @@
                         </div>
                             {% if cliente.ilicito or cliente.politico_expuesto %}
                                 <div class="col-md-12" style="padding-top:20px;">
-                                    <p><span><h5 class="text-center"><font color="red"><strong><i class="fa fa-warning"></i>&nbsp;Atención: El cliente es una persona que ha sido investigada o es un político expuesto. No podrá emitir la póliza mientras se investiga el caso.</strong></font></h5></span></p>
+                                    <p><span><h5 class="text-center"><font color="orange"><strong><i class="fa fa-warning"></i>&nbsp;La póliza ha sido solicitada por un cliente que es político expuesto o ha sido objeto de investigación. Antes de poder emitirla pasará por una revisión especial.</strong></font></h5></span></p>
                                 </div>
                             {% else %}
                                 <div class="col-md-12" style="padding-top:20px;">
